--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,10 @@ cmake_minimum_required(VERSION 3.0)
 
 project(razor_imu_serial)
 
-include_directories(/tmp/usr/local/include/)
-link_directories(/tmp/usr/local/lib/)
+find_package(serial)
 
 add_executable(test src/test.cpp src/razor_imu/razor_imu_serial.cpp)
-target_link_libraries(test serial)
+target_link_libraries(test ${SERIAL_LIBS})
 
 add_library(razor_imu_serial SHARED 
     src/razor_imu/razor_imu_serial.cpp
@@ -21,4 +20,4 @@ configure_package_config_file(razor_imu_serialConfig.cmake.in
 
 install(TARGETS razor_imu_serial DESTINATION /usr/local/lib/razor_imu_serial)
 install(FILES src/razor_imu/razor_imu_serial.hpp DESTINATION /usr/local/include/razor_imu_serial)
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/razor_imu_serialConfig.cmake DESTINATION /usr/lib/cmake/razor_imu_serial)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/razor_imu_serialConfig.cmake DESTINATION /usr/local/lib/cmake/razor_imu_serial)
