--- a/razor_imu_serialConfig.cmake.in
+++ b/razor_imu_serialConfig.cmake.in
@@ -2,14 +2,14 @@ set(RAZOR_IMU_VERSION 0.0.0)
 
 @PACKAGE_INIT@
 
-set(PACKAGE_PREFIX_DIR "/usr/local")
-set(RAZOR_IMU_LIB_DIR "${PACKAGE_PREFIX_DIR}/lib/razor_imu_serial")
-set(RAZOR_IMU_INCLUDE_DIR "${PACKAGE_PREFIX_DIR}/include")
 
-set(RAZOR_IMU_LIBS razor_imu_serial serial)
+set(PACKAGE_PREFIX_DIR /usr/local)
+set(RAZOR_IMU_LIB_DIRS ${PACKAGE_PREFIX_DIR}/lib/razor_imu_serial ${SERIAL_LIB_DIRS})
+set(RAZOR_IMU_INCLUDE_DIRS ${PACKAGE_PREFIX_DIR}/include ${SERIAL_INCLUDE_DIRS})
 
-link_directories(${RAZOR_IMU_LIB_DIR})
-include_directories(${RAZOR_IMU_INCLUDE_DIR})
+set(RAZOR_IMU_LIBS razor_imu_serial ${SERIAL_LIBS})
 
+link_directories(${RAZOR_IMU_LIB_DIRS})
+include_directories(${RAZOR_IMU_INCLUDE_DIRS})
 
 check_required_components(razor_imu_serial)
